--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -48,7 +48,7 @@
                                 <i class="fas fa-tachometer-alt"></i>
                                 Panel Principal
                             </a>
-                            <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="statistics">
+                            <a href="{% url 'reports:reporte_estadisticas' %}" class="nav-item" data-section="statistics">
                                 <i class="fas fa-chart-line"></i>
                                 Estadísticas
                             </a>
